--- a/static/html/default/templates/report/reporteComparativoEstilo.html
+++ b/static/html/default/templates/report/reporteComparativoEstilo.html
@@ -1,8 +1,16 @@
 <style type="text/css">
+	
+	body{
+		font-family: Verdana;
+		font-size: 11px;
+	}
+
 	table{
 		text-align: center;
 		width: 100%;
+		border-collapse: collapse;
 	}
+
 	.tab td{
 		width: 20%;
 		border: solid 1px #000;
