--- a/static/html/default/templates/report/template.html
+++ b/static/html/default/templates/report/template.html
@@ -19,7 +19,7 @@
 				<p>Tel: {telefono}</p>
 			</td>
 			<td style="width: 33%;">
-				<img src="static/img/banner.jpg" style="width: 120px;" />
+				<img src="../static/img/banner.jpg" style="width: 120px;" />
 				<br/>
 				<span style="font-size: 18px;">{titulo_reporte}</span>
 			</td>
