--- a/static/html/default/templates/report/reporteComparativoTalla.html
+++ b/static/html/default/templates/report/reporteComparativoTalla.html
@@ -1,9 +1,18 @@
 <style type="text/css">
+	
+	body{
+		font-family: Verdana;
+		font-size: 11px;
+	}
+
 	table{
 		text-align: center;
 		width: 100%;
+		border-collapse: collapse;
 	}
+	
 	.tab td{
+		border-collapse: collapse;
 		border: solid 1px #000;
 	}
 	
