--- a/static/html/default/templates/template_nofixed.html
+++ b/static/html/default/templates/template_nofixed.html
@@ -157,6 +157,7 @@
                         <ul class="dropdown-menu" data-role="dropdown">
                             <li><a href="/{systemModuleName}/inventario/nuevo_producto"><i class="icon-equalizer"></i> Mantenimiento</a></li>
                             <li><a href="/{systemModuleName}/inventario/resumenGeneralProducto"><i class="icon-book"></i> Catálogo</a></li>
+                            <li><a href="/{systemModuleName}/inventario/productoEntrante"><i class="icon-cycle"></i> En tránsito</a></li>
                         </ul>
                     </div>
                     <div class="element">
