--- a/static/html/default/templates/template_nofixed.html
+++ b/static/html/default/templates/template_nofixed.html
@@ -181,7 +181,7 @@
                                     <li><a href="">Cuadre mensual</a></li>
                                     <li><a href="">Devolución sobre venta</a></li>
                                     <li><a href="/{systemModuleName}/inventario/reporte_inventario">Inventarios</a></li>
-                                    <li><a href="">Kardex</a></li>
+                                    <li><a href="/inventario/inventario/reporte_kardex">Kardex</a></li>
                                     <li><a href="">Entradas y salidas (mes)</a></li>
                                     <li><a href="">Ventas</a></li>
                                 </ul>
