--- a/static/html/default/templates/report/template.html
+++ b/static/html/default/templates/report/template.html
@@ -8,7 +8,7 @@
 		p,h1,h2,h3,h4,h5{margin: 3px;}
 		
 		.lett{
-			font-family: courier;  color: gray;font-size:14px;
+			font-family: Verdana;  color: gray;font-size:14px;
 		}
 	</style>
 	<table style="width: 100%; text-align: center;">
@@ -19,7 +19,7 @@
 				<p>Tel: {telefono}</p>
 			</td>
 			<td style="width: 33%;">
-				<img src="../static/img/banner.jpg" style="width: 120px;" />
+				<!--<img src="../static/img/banner.jpg" style="width: 120px;" />-->
 				<br/>
 				<span style="font-size: 18px;">{titulo_reporte}</span>
 			</td>
