--- a/static/html/default/templates/inventario/reporte_kardex.html
+++ b/static/html/default/templates/inventario/reporte_kardex.html
@@ -16,7 +16,7 @@
 		<div class="grid">
 			<div class="row">
 				<div class="span1">
-					Saldos a fecha
+					Fecha
 				</div>
 				<div class="span2">
 					<div id="saldos" class="input-control text">
@@ -25,30 +25,9 @@
 					</div>
 				</div>
 				<div class="span2">
-					<div class="input-control checkbox">
-					    <label>
-					        <input type="checkbox" id="suprimir_cero" checked/>
-					        <span class="check"></span>
-					        Suprimir existencia 0
-					    </label>
-					</div>
-				</div>
-				<div class="span2">
-					<div class="input-control checkbox">
-					    <label>
-					        <input type="checkbox" id="mostrar_pv" checked/>
-					        <span class="check"></span>
-					        Mostrar PV
-					    </label>
-					</div>
-				</div>
-				<div class="span2">
-					<div class="input-control checkbox">
-					    <label>
-					        <input type="checkbox" id="mostrar_pc" checked/>
-					        <span class="check"></span>
-					        Mostrar PC
-					    </label>
+					<div id="saldos" class="input-control text">
+						<input type="text"  id="fecha2"/>
+						<button type="button" class="btn-date"></button>
 					</div>
 				</div>
 			</div>
@@ -66,19 +45,7 @@
 						<input type="text" id="bodega_2" value="99"/>
 					</div>
 				</div>
-				<div class="span1">
-					Catálogo
-				</div>
-				<div class="span2">
-					<div class="input-control text">
-						<input type="text" id="catalogo_1" value="1"/>
-					</div>
-				</div>
-				<div class="span2">
-					<div class="input-control text">
-						<input type="text" id="catalogo_2" value="999"/>
-					</div>
-				</div>	
+				
 			</div>
 			<div class="row">
 				<div class="span1">
@@ -94,19 +61,7 @@
 						<input type="text" id="linea_2" value="999"/>
 					</div>
 				</div>	
-				<div class="span1">
-					Página
-				</div>
-				<div class="span2">
-					<div class="input-control text">
-						<input type="text" id="pagina_1" value="1"/>
-					</div>
-				</div>
-				<div class="span2">
-					<div class="input-control text">
-						<input type="text" id="pagina_2" value="999"/>
-					</div>
-				</div>
+				
 			</div>
 			<div class="row">
 				<div class="span1">
@@ -407,6 +362,7 @@
 			var grid = null;
 	
             var fecha = $('#fecha').val().trim();
+            var fecha2 = $('#fecha2').val().trim();
             var bodega_1 = $('#bodega_1').val().trim();
             var bodega_2 = $('#bodega_2').val().trim();
             var linea_1 = $('#linea_1').val().trim();
@@ -415,29 +371,11 @@
             var proveedor_2 = $('#proveedor_2').val().trim();
             var estilo_1 = $('#estilo_1').val().trim();
 			var estilo_2 = $('#estilo_2').val().trim();
-			var catalogo_1 = $('#catalogo_1').val().trim();
-			var catalogo_2 = $('#catalogo_2').val().trim();
-			var pagina_1 = $('#pagina_1').val().trim();
-			var pagina_2 = $('#pagina_2').val().trim();
 			var color_1 = $('#color_1').val().trim();
 			var color_2 = $('#color_2').val().trim();
 			var talla_1 = $('#talla_1').val().trim();
 			var talla_2 = $('#talla_2').val().trim();
-			var seleccionado = "no";
-			var pc = "no";
-			var pv = "no";
 
-			if( $('#suprimir_cero').is(':checked') ) {
-			    seleccionado = "si";
-			}
-			
-			if( $('#mostrar_pc').is(':checked') ) {
-			    pc = "si";
-			}
-			
-			if( $('#mostrar_pv').is(':checked') ) {
-			    pv = "si";
-			}
 
             if (bodega_1 != "" && bodega_2 != "") {
 				filtros.push([['bodega.id', bodega_1].join(":"),['bodega.id', bodega_2].join(":")].join(";"));
@@ -455,13 +393,6 @@
 				filtros.push([['articulo.estilo', estilo_1].join(":"),['articulo.estilo', estilo_2].join(":")].join(";"));
 			}
 			
-			if (catalogo_1 != "" && catalogo_2 != "") {
-				filtros.push([['producto.catalogo', catalogo_1].join(":"),['producto.catalogo', catalogo_2].join(":")].join(";"));
-			}
-			
-			if (pagina_1 != "" && pagina_2 != "") {
-				filtros.push([['producto.n_pagina', pagina_1].join(":"),['producto.n_pagina', pagina_2].join(":")].join(";"));
-			}
 			
 			if (color_1 != "" && color_2 != "") {
 				filtros.push([['articulo.color', color_1].join(":"),['articulo.color', color_2].join(":")].join(";"));
@@ -475,7 +406,7 @@
 			
 			var tipo = $('input:radio[name=tipo]:checked').val();
 			
-			var uri = '/inventario/inventario/imprimir_reporteKardex?typeReport='+tipo+'&filtros='+cadFiltros+'&fecha='+fecha+'&suprimir='+seleccionado+'&pc='+pc+'&pv='+pv;
+			var uri = '/inventario/inventario/imprimir_reporteKardex?typeReport='+tipo+'&filtros='+cadFiltros;
 			window.open(uri, '_blank');
 		});
 	});
@@ -491,11 +422,13 @@
     };
 
     var colsOption_bodega = [
-        {id: 'nombre_bodega', header: "Bodega", width: 287},
-        {id: 'pares', header: "Pares", width: 150},
-        {id: 'total_costo', header: "Total costo", width: 150},
-        {id: 'total_precio', header: "Total precio", width: 150},
-        {id: 'margen', header: "Margen", width: 150}
+        {id: 'fecha', header: "Fecha", width: 100},
+        {id: 'documento', header: "Documento", width: 100},
+        {id: 'concepto', header: "Concepto", width: 150},
+        {id: 'entradas', header: "Etradas", width: 100},
+        {id: 'salidas', header: "Salidas", width: 100},
+        {id: 'saldo', header: "Saldo", width: 150},
+        {id: 'bodega', header: "Bodega", width: 187}
 
     ];
 
@@ -535,12 +468,14 @@
     };
 	
     var colsOption_linea = [
-        {id: 'nombre_bodega', header: "Bodega", width: 250},
-		{id: 'nombre_linea', header: "Linea", width: 137},
-        {id: 'pares', header: "Pares", width: 125},
-        {id: 'total_costo', header: "Total costo", width: 125},
-        {id: 'total_precio', header: "Total precio", width: 125},
-        {id: 'margen', header: "Margen", width: 125}
+    	{id: 'proveedor', header: "Proveedor", width: 238},
+        {id: 'fecha', header: "Fecha", width: 100},
+        {id: 'documento', header: "Documento", width: 100},
+        {id: 'concepto', header: "Concepto", width: 150},
+        {id: 'entradas', header: "Etradas", width: 50},
+        {id: 'salidas', header: "Salidas", width: 50},
+        {id: 'saldo', header: "Saldo", width: 50},
+        {id: 'bodega', header: "Bodega", width: 150}
 
     ];
 
@@ -580,13 +515,15 @@
     };
 	
     var colsOption_proveedor = [
-        {id: 'nombre_bodega', header: "Bodega", width: 250},
-		{id: 'nombre_linea', header: "Linea", width: 150},
-		{id: 'nombre_proveedor', header: "Proveedor", width: 150},
-        {id: 'pares', header: "Pares", width: 125},
-        {id: 'total_costo', header: "Total costo", width: 125},
-        {id: 'total_precio', header: "Total precio", width: 125},
-        {id: 'margen', header: "Margen", width: 125}
+    	{id: 'linea', header: "Linea", width: 150},
+        {id: 'estilo', header: "Estilo", width: 75},
+        {id: 'fecha', header: "Fecha", width: 100},
+        {id: 'documento', header: "Documento", width: 100},
+        {id: 'concepto', header: "Concepto", width: 163},
+        {id: 'entradas', header: "Etradas", width: 50},
+        {id: 'salidas', header: "Salidas", width: 50},
+        {id: 'saldo', header: "Saldo", width: 50},
+        {id: 'bodega', header: "Bodega", width: 150}
 
     ];
 
@@ -594,7 +531,7 @@
         id: grid_proveedor_id,
         loadURL: '/inventario/grid_tables/reporteKardex_proveedor',
         saveURL: '',
-        width: "1053", //"100%", // 700,
+        width: "890", //"100%", // 700,
         height: "290", //"100%", // 330,
         container: 'gridbox3',
         replaceContainer: true,
@@ -626,15 +563,16 @@
     };
 	
     var colsOption_estilo = [
-        {id: 'nombre_bodega', header: "Bodega", width: 250},
-		{id: 'nombre_linea', header: "Linea", width: 150},
-		{id: 'nombre_proveedor', header: "Proveedor", width: 150},
-		{id: 'estilo', header: "Estilo", width: 150},
-        {id: 'pares', header: "Pares", width: 125},
-        {id: 'total_costo', header: "Total costo", width: 125},
-        {id: 'total_precio', header: "Total precio", width: 125},
-        {id: 'margen', header: "Margen", width: 125},
-		{id: 'costo_unitario', header: "Costo", width: 125}
+        {id: 'linea', header: "Linea", width: 100},
+        {id: 'estilo', header: "Estilo", width: 75},
+        {id: 'color', header: "Color", width: 63},
+        {id: 'fecha', header: "Fecha", width: 100},
+        {id: 'documento', header: "Documento", width: 100},
+        {id: 'concepto', header: "Concepto", width: 150},
+        {id: 'entradas', header: "Etradas", width: 50},
+        {id: 'salidas', header: "Salidas", width: 50},
+        {id: 'saldo', header: "Saldo", width: 50},
+        {id: 'bodega', header: "Bodega", width: 150}
 
     ];
 
@@ -642,7 +580,7 @@
         id: grid_estilo_id,
         loadURL: '/inventario/grid_tables/reporteKardex_estilo',
         saveURL: '',
-        width: "1327", //"100%", // 700,
+        width: "890", //"100%", // 700,
         height: "290", //"100%", // 330,
         container: 'gridbox4',
         replaceContainer: true,
@@ -674,16 +612,17 @@
     };
 	
     var colsOption_color = [
-        {id: 'nombre_bodega', header: "Bodega", width: 250},
-		{id: 'nombre_linea', header: "Linea", width: 150},
-		{id: 'nombre_proveedor', header: "Proveedor", width: 150},
-		{id: 'estilo', header: "Estilo", width: 150},
-		{id: 'nombre_color', header: "Color", width: 150},
-        {id: 'pares', header: "Pares", width: 125},
-        {id: 'total_costo', header: "Total costo", width: 125},
-        {id: 'total_precio', header: "Total precio", width: 125},
-        {id: 'margen', header: "Margen", width: 125},
-		{id: 'costo_unitario', header: "Costo", width: 125}
+        {id: 'linea', header: "Linea", width: 100},
+        {id: 'estilo', header: "Estilo", width: 75},
+        {id: 'color', header: "Color", width: 63},
+        {id: 'talla', header: "talla", width: 50},
+        {id: 'fecha', header: "Fecha", width: 100},
+        {id: 'documento', header: "Documento", width: 50},
+        {id: 'concepto', header: "Concepto", width: 150},
+        {id: 'entradas', header: "Etradas", width: 50},
+        {id: 'salidas', header: "Salidas", width: 50},
+        {id: 'saldo', header: "Saldo", width: 50},
+        {id: 'bodega', header: "Bodega", width: 150}
 
     ];
 
@@ -691,7 +630,7 @@
         id: grid_color_id,
         loadURL: '/inventario/grid_tables/reporteKardex_color',
         saveURL: '',
-        width: "1477", //"100%", // 700,
+        width: "890", //"100%", // 700,
         height: "290", //"100%", // 330,
         container: 'gridbox5',
         replaceContainer: true,
@@ -773,18 +712,11 @@
     };
 	
     var colsOption_provmar = [
-        {id: 'nombre_bodega', header: "Bodega", width: 250},
-		{id: 'nombre_linea', header: "Linea", width: 150},
-		{id: 'nombre_proveedor', header: "Proveedor", width: 150},
-		{id: 'nombre_marca', header: "Marca", width: 150},
-		{id: 'estilo', header: "Estilo", width: 150},
-		{id: 'nombre_color', header: "Color", width: 150},
-		{id: 'talla', header: "Talla", width: 150},
-        {id: 'pares', header: "Pares", width: 125},
-        {id: 'total_costo', header: "Total costo", width: 125},
-        {id: 'total_precio', header: "Total precio", width: 125},
-        {id: 'margen', header: "Margen", width: 125},
-		{id: 'costo_unitario', header: "Costo", width: 125}
+        {id: 'concepto', header: "Concepto", width: 285},
+		{id: 'entradas', header: "Entradas", width: 150},
+		{id: 'costo_ent', header: "Costo", width: 150},
+		{id: 'salidas', header: "Salidas", width: 150},
+		{id: 'costo_sal', header: "Costo", width: 150}
 
     ];
 
@@ -792,7 +724,7 @@
         id: grid_provmar_id,
         loadURL: '/inventario/grid_tables/reporteKardex_provmar',
         saveURL: '',
-        width: "1777", //"100%", // 700,
+        width: "890", //"100%", // 700,
         height: "290", //"100%", // 330,
         container: 'gridbox7',
         replaceContainer: true,
