--- a/static/html/default/templates/report/reporteKardexProveedor.html
+++ b/static/html/default/templates/report/reporteKardexProveedor.html
@@ -1,16 +1,13 @@
 <style type="text/css">
+	body{
+		font-family: Verdana;
+		font-size: 11px;
+	}
+
 	table{
 		text-align: center;
 		width: 100%;
-	}
-
-	body{
-		font-family: Arial;
-		font-size: 10px;
-	}
-
-	table td{
-		width: 15%;
+		border-collapse: collapse;
 	}
 	
 	table thead tr th{
@@ -18,27 +15,46 @@
 		border-top: solid 1px #000;
 	}
 	
-	strong{
-		font-size: 12px;
+	.hdr tr{
+		border: solid 1px #000;
 	}
+	
 </style>
-Saldos a la fecha: {fecha_saldos}
-<br/>
 <br/>
 <!-- START bodegasylineas -->
-<strong>[{bodega}] {bodega_nombre}</strong>
-<br/>
-<strong>[{linea}] {linea_nombre}</strong>
-<br/>
-<strong>[{proveedor}] {proveedor_nombre}</strong>
-<table>
-	<thead>
+<table style="page-break-inside: avoid;">
+		<thead>
+		<tr>
+			<th colspan="5">NOMBRE DEL CONTRIBUYENTE: {nombre_empresa}</th>
+			<th colspan="4">PERIODO: Del {fecha_1} al {fecha_2}</th>
+		</tr>
+		<tr>
+			<th colspan="5">NIT: {nit}</th>
+			<th colspan="4">NRC: {nrc}</th>
+		</tr>
+		<tr>
+			<th colspan="5">NOMBRE, RAZON SOCIAL DEL PROVEEDOR: [{proveedor}] {proveedor_nombre}</th>
+			<th colspan="4">NACIONALIDAD DEL PROVEEDOR: {nacionalidad_proveedor}</th>
+		</tr>
+		<tr>
+			<th colspan="5">BODEGA: [{bodega}] {bodega_nombre}</th>
+			<th colspan="4">LINEA DE PRODUCTO: [{linea}] {linea_nombre}</th>
+		</tr>
 		<tr>
 			<th>
 				Fecha
 			</th>
 			<th>
+				Codigo
+			</th>
+			<th>
+				Descripcion
+			</th>
+			<th>
 				Documento
+			</th>
+			<th>
+				Ref retaceo No.
 			</th>
 			<th>
 				Concepto
@@ -57,7 +73,10 @@ Saldos a la fecha: {fecha_saldos}
 	<!-- START contenido_bl{bodega}_{linea}_{proveedor} -->
 	<tr>
 		<td>{fecha}</td>
+		<td>{articulo}</td>
+		<td>{descripcion}</td>
 		<td>{documento}</td>
+		<td>{referencia_recateo_no}</td>
 		<td>{concepto}</td>
 		<td>{entradas}</td>
 		<td>{salidas}</td>
