--- a/static/html/default/templates/report/template.html
+++ b/static/html/default/templates/report/template.html
@@ -10,6 +10,16 @@
 		.lett{
 			font-family: Verdana;  color: gray;font-size:14px;
 		}
+		
+		table {
+			border-collapse: collapse;
+			margin-top: 0px;
+		}
+		
+		table td{
+			padding-left: 3px;
+			padding-right: 3px;
+		}
 	</style>
 	<table style="width: 100%; text-align: center;">
 		<tr>
