--- a/static/html/default/templates/inventario/reporte_kardex.html
+++ b/static/html/default/templates/inventario/reporte_kardex.html
@@ -25,7 +25,7 @@
 					</div>
 				</div>
 				<div class="span2">
-					<div id="saldos" class="input-control text">
+					<div id="saldos2" class="input-control text">
 						<input type="text"  id="fecha2"/>
 						<button type="button" class="btn-date"></button>
 					</div>
@@ -110,7 +110,7 @@
 				</div>
 				<div class="span2">
 					<div class="input-control text">
-						<input type="text" id="talla_1" value="1"/>
+						<input type="text" id="talla_1" value="0"/>
 					</div>
 				</div>
 				<div class="span2">
@@ -245,10 +245,19 @@
 		var mes  = (f.getMonth() + 1);
 		var dia = f.getDate()+1;
 		
-		var fecha = anio+"/"+mes+"/"+dia;
+		var fecha = anio+"/"+mes+"/"+2;
+        var fecha2 = anio+"/"+(mes+1)+"/"+1;
 		
 		$("#saldos").datepicker({
 			date: fecha, // set init date
+			format: "yyyy/m/d", // set output format
+			effect: "slide", // none, slide, fade
+			position: "bottom", // top or bottom,
+			locale: 'es', // 'ru' or 'en', default is $.Metro.currentLocale
+		});
+        
+        $("#saldos2").datepicker({
+			date: fecha2, // set init date
 			format: "yyyy/m/d", // set output format
 			effect: "slide", // none, slide, fade
 			position: "bottom", // top or bottom,
@@ -267,6 +276,7 @@
 			var grid = null;
 	
             var fecha = $('#fecha').val().trim();
+            var fecha2 = $('#fecha2').val().trim();
             var bodega_1 = $('#bodega_1').val().trim();
             var bodega_2 = $('#bodega_2').val().trim();
             var linea_1 = $('#linea_1').val().trim();
@@ -275,29 +285,11 @@
             var proveedor_2 = $('#proveedor_2').val().trim();
             var estilo_1 = $('#estilo_1').val().trim();
 			var estilo_2 = $('#estilo_2').val().trim();
-			var catalogo_1 = $('#catalogo_1').val().trim();
-			var catalogo_2 = $('#catalogo_2').val().trim();
-			var pagina_1 = $('#pagina_1').val().trim();
-			var pagina_2 = $('#pagina_2').val().trim();
 			var color_1 = $('#color_1').val().trim();
 			var color_2 = $('#color_2').val().trim();
 			var talla_1 = $('#talla_1').val().trim();
 			var talla_2 = $('#talla_2').val().trim();
-			var seleccionado = "no";
-			var pc = "no";
-			var pv = "no";
-
-			if( $('#suprimir_cero').is(':checked') ) {
-			    seleccionado = "si";
-			}
 			
-			if( $('#mostrar_pc').is(':checked') ) {
-			    pc = "si";
-			}
-			
-			if( $('#mostrar_pv').is(':checked') ) {
-			    pv = "si";
-			}
 
             if (bodega_1 != "" && bodega_2 != "") {
 				filtros.push([['bodega.id', bodega_1].join(":"),['bodega.id', bodega_2].join(":")].join(";"));
@@ -315,14 +307,6 @@
 				filtros.push([['articulo.estilo', estilo_1].join(":"),['articulo.estilo', estilo_2].join(":")].join(";"));
 			}
 			
-			if (catalogo_1 != "" && catalogo_2 != "") {
-				filtros.push([['producto.catalogo', catalogo_1].join(":"),['producto.catalogo', catalogo_2].join(":")].join(";"));
-			}
-			
-			if (pagina_1 != "" && pagina_2 != "") {
-				filtros.push([['producto.n_pagina', pagina_1].join(":"),['producto.n_pagina', pagina_2].join(":")].join(";"));
-			}
-			
 			if (color_1 != "" && color_2 != "") {
 				filtros.push([['articulo.color', color_1].join(":"),['articulo.color', color_2].join(":")].join(";"));
 			}	
@@ -334,25 +318,25 @@
 			
 			
 			grid = Sigma.$grid("bodega_grid");
-            grid.loadURL = '/inventario/grid_tables/reporteKardex_bodega?filtros=' + filtros+'&fecha='+fecha+'&suprimir='+seleccionado+'&pc='+pc+'&pv='+pv;
+            grid.loadURL = '/inventario/grid_tables/reporteKardex_bodega?filtros=' + filtros+'&fecha='+fecha+'&fecha2='+fecha2;
             grid.reload();
 			grid = Sigma.$grid("linea_grid");
-            grid.loadURL = '/inventario/grid_tables/reporteKardex_linea?filtros=' + filtros+'&fecha='+fecha+'&suprimir='+seleccionado+'&pc='+pc+'&pv='+pv;
+            grid.loadURL = '/inventario/grid_tables/reporteKardex_linea?filtros=' + filtros+'&fecha='+fecha+'&fecha2='+fecha2;
             grid.reload();
 			grid = Sigma.$grid("proveedor_grid");
-            grid.loadURL = '/inventario/grid_tables/reporteKardex_proveedor?filtros=' + filtros+'&fecha='+fecha+'&suprimir='+seleccionado+'&pc='+pc+'&pv='+pv;
+            grid.loadURL = '/inventario/grid_tables/reporteKardex_proveedor?filtros=' + filtros+'&fecha='+fecha+'&fecha=2'+fecha2;
             grid.reload();
 			grid = Sigma.$grid("estilo_grid");
-            grid.loadURL = '/inventario/grid_tables/reporteKardex_estilo?filtros=' + filtros+'&fecha='+fecha+'&suprimir='+seleccionado+'&pc='+pc+'&pv='+pv;
+            grid.loadURL = '/inventario/grid_tables/reporteKardex_estilo?filtros=' + filtros+'&fecha='+fecha+'&fecha2='+fecha2;
             grid.reload();
 			grid = Sigma.$grid("color_grid");
-            grid.loadURL = '/inventario/grid_tables/reporteKardex_color?filtros=' + filtros+'&fecha='+fecha+'&suprimir='+seleccionado+'&pc='+pc+'&pv='+pv;
+            grid.loadURL = '/inventario/grid_tables/reporteKardex_color?filtros=' + filtros+'&fecha='+fecha+'&fecha2='+fecha2;
             grid.reload();
 			grid = Sigma.$grid("talla_grid");
-            grid.loadURL = '/inventario/grid_tables/reporteKardex_talla?filtros=' + filtros+'&fecha='+fecha+'&suprimir='+seleccionado+'&pc='+pc+'&pv='+pv;
+            grid.loadURL = '/inventario/grid_tables/reporteKardex_talla?filtros=' + filtros+'&fecha='+fecha+'&fecha2='+fecha2;
             grid.reload();
 			grid = Sigma.$grid("provmar_grid");
-            grid.loadURL = '/inventario/grid_tables/reporteKardex_provmar?filtros=' + filtros+'&fecha='+fecha+'&suprimir='+seleccionado+'&pc='+pc+'&pv='+pv;
+            grid.loadURL = '/inventario/grid_tables/reporteKardex_provmar?filtros=' + filtros+'&fecha='+fecha+'&fecha2='+fecha2;
             grid.reload();
 			
 		});
@@ -406,7 +390,7 @@
 			
 			var tipo = $('input:radio[name=tipo]:checked').val();
 			
-			var uri = '/inventario/inventario/imprimir_reporteKardex?typeReport='+tipo+'&filtros='+cadFiltros;
+			var uri = '/inventario/inventario/imprimir_reporteKardex?typeReport='+tipo+'&filtros='+cadFiltros+'&fecha='+fecha+'&fecha2='+fecha2;
 			window.open(uri, '_blank');
 		});
 	});
