--- a/static/html/default/templates/inventario/reporte_kardex.html
+++ b/static/html/default/templates/inventario/reporte_kardex.html
@@ -432,6 +432,7 @@
         pageSize: 10,
         allowCustomSkin: true,
         skin: 'mac',
+        autoLoad: false,
         toolbarContent: 'reload | nav state'
     };
 
@@ -479,6 +480,7 @@
         pageSize: 10,
         allowCustomSkin: true,
         skin: 'mac',
+        autoLoad: false,
         toolbarContent: 'reload | nav state'
     };
 
@@ -527,6 +529,7 @@
         pageSize: 10,
         allowCustomSkin: true,
         skin: 'mac',
+        autoLoad: false,
         toolbarContent: 'reload | nav state'
     };
 
@@ -576,6 +579,7 @@
         pageSize: 10,
         allowCustomSkin: true,
         skin: 'mac',
+        autoLoad: false,
         toolbarContent: 'reload | nav state'
     };
 
@@ -626,6 +630,7 @@
         pageSize: 10,
         allowCustomSkin: true,
         skin: 'mac',
+        autoLoad: false,
         toolbarContent: 'reload | nav state'
     };
 
@@ -676,6 +681,7 @@
         pageSize: 10,
         allowCustomSkin: true,
         skin: 'mac',
+        autoLoad: false,
         toolbarContent: 'reload | nav state'
     };
 
@@ -720,6 +726,7 @@
         pageSize: 10,
         allowCustomSkin: true,
         skin: 'mac',
+        autoLoad: false,
         toolbarContent: 'reload | nav state'
     };
 
