--- a/static/html/default/templates/template_nofixed.html
+++ b/static/html/default/templates/template_nofixed.html
@@ -148,35 +148,45 @@
 
                     <a class="element brand" href="{back_url}"><i class="icon-arrow-left-3"></i></a>
                     
-
-                    <a class="element" href="/{systemModuleName}/inventario/segmentacion"><i class="icon-list"></i> Segmentación</a>
-                    <a class="element" href="/{systemModuleName}/inventario/proveedores"><i class="icon-user-2"></i> Proveedores</a>
-                    <a class="element" href="/{systemModuleName}/inventario/bodegas"><i class="icon-box"></i> Bodegas</a>
-                    <div class="element">    
-                        <a class="dropdown-toggle" href="#"><i class="icon-basket"></i> Productos</a>
+                    <div class="element">
+                        <a class="dropdown-toggle" href="#"><i class="icon-tools"></i> Mantenimientos</a>
                         <ul class="dropdown-menu" data-role="dropdown">
-                            <li><a href="/{systemModuleName}/inventario/nuevo_producto"><i class="icon-equalizer"></i> Mantenimiento</a></li>
-                            <li><a href="/{systemModuleName}/inventario/resumenGeneralProducto"><i class="icon-book"></i> Catálogo</a></li>
-                            <li><a href="/{systemModuleName}/inventario/productoEntrante"><i class="icon-cycle"></i> En tránsito</a></li>
+                            <li>
+                                <a href="/{systemModuleName}/inventario/segmentacion"><i class="icon-list"></i> Segmentación</a>
+                            </li>
+                            <li>
+                                <a href="/{systemModuleName}/inventario/proveedores"><i class="icon-user-2"></i> Proveedores</a>
+                            </li>
+                            <li>
+                                <a href="/{systemModuleName}/inventario/bodegas"><i class="icon-box"></i> Bodegas</a>
+                            </li>
+                            <li><a href="/{systemModuleName}/inventario/catalogos"><i class="icon-broadcast"></i> Campañas</a></li>
+                            <li>
+                                <a class="dropdown-toggle" href="#"><i class="icon-basket"></i> Productos</a>
+                                <ul class="dropdown-menu" data-role="dropdown">
+                                    <li><a href="/{systemModuleName}/inventario/nuevo_producto"><i class="icon-file"></i> Nuevo producto</a></li>
+                                    <li><a href="/{systemModuleName}/inventario/resumenGeneralProducto"><i class="icon-book"></i> Catálogo</a></li>
+                                    <li><a href="/{systemModuleName}/inventario/productoEntrante"><i class="icon-cycle"></i> En tránsito</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a class="dropdown-toggle" href="#"><i class="icon-tab"></i> Transacciones</a>
+                                <ul class="dropdown-menu" data-role="dropdown">
+                                    <li><a href="/{systemModuleName}/inventario/traslados">Traslados</a></li>
+                                    <li><a href="/{systemModuleName}/inventario/listadoTraslado">Historial de traslados</a></li>
+                                </ul> 
+                            </li>
                         </ul>
                     </div>
-                    <div class="element">
-                        <a class="dropdown-toggle" href="#"><i class="icon-tab"></i> Transacciones</a>
-                        <ul class="dropdown-menu" data-role="dropdown">
-                            <li><a href="/{systemModuleName}/inventario/traslados">Traslados</a></li>
-                            <li><a href="/{systemModuleName}/inventario/listadoTraslado">Historial de traslados</a></li>
-                        </ul>    
-                    </div>
+
                  
                     <div class="element">
                         <a class="dropdown-toggle" href="#"><i class="icon-plus-2"></i> Más</a>
                         <ul class="dropdown-menu" data-role="dropdown">
-                            <li><a href="/{systemModuleName}/inventario/catalogos"><i class="icon-broadcast"></i> Campañas</a></li>
+                            
                             <li><a href="/{systemModuleName}/inventario/hoja_retaceo"><i class="icon-clipboard-2"></i> Hoja de retaceo</a></li>
                             <li><a href="/{systemModuleName}/inventario/movKardex"><i class="icon-clipboard"></i> Kardex</a></li>
-                            <li><a href="/{systemModuleName}/inventario/comparativo_fisico_teorico"> Recuento de inventario</a></li>
-                            <li><a href="/{systemModuleName}/inventario/ofertas"> Preparación de ofertas</a></li>
-                            <li><a href="#" class="dropdown-toggle"> Reportes</a>
+                            <li><a href="#" class="dropdown-toggle"><i class="icon-printer"></i> Reportes</a>
                                 <ul class="dropdown-menu" data-role="dropdown">
                                     <li><a href="">Cuadre mensual</a></li>
                                     <li><a href="">Devolución sobre venta</a></li>
@@ -186,6 +196,10 @@
                                     <li><a href="">Ventas</a></li>
                                 </ul>
                             </li> 
+                            <div class="divider"></div>
+                            <li><a href="/{systemModuleName}/inventario/comparativo_fisico_teorico"> Recuento de inventario</a></li>
+                            <li><a href="/{systemModuleName}/inventario/ofertas"> Preparación de ofertas</a></li>
+                            
                         </ul>
                     </div>
                     
@@ -193,7 +207,7 @@
                     <div class="element input-element">
                         <form>
                             <div class="input-control text">
-                                <input id="navBusquedaProducto" type="text" placeholder="Estilo">
+                                <input id="navBusquedaProducto" type="text" placeholder="Código de producto">
                                 <button class="btn-search" type="button" onclick="ver_detalle_producto();" ></button>
                             </div>
                         </form>
@@ -206,25 +220,26 @@
                         <ul class="dropdown-menu place-right" data-role="dropdown">
                             <!--<li><a href="/{systemModuleName}/modulo/cuenta">Cuenta</a></li>-->
                             <li><a href="/{systemModuleName}/logout/user">Salir</a></li>
+                            <div class="divider"></div>
+                            <li><a href="http://metroui.org.ua/" target="_blank">Powered by MetroUI</a></li>
                         </ul>
                     </div>
                     <span class="element-divider"></span>
                     <button class="element place-right">
-                        Has iniciado sesión como: <strong>{username}</strong>
+                        <i class="icon-user"></i> &nbsp;&nbsp;<strong>{username}</strong>
                     </button>
+                    <span class="element-divider place-right"></span>
+                    <a class="element place-right" href="#"> <p class="subheader-secondary" style="margin-top:-5px;"><i class="icon-enter" ></i> {TITULO}</p></a>
                 </nav>
             </nav> 
             <br/>
             <br/>
 
 
-            <div class="page-region" style="padding-left:30px; padding-top: 50px;padding-right: 15px;">
+            <div class="page-region" style="padding-left:30px; padding-top: 30px;padding-right: 15px;">
                 {content}
             </div>
             <div style="clear:both;"></div>
-            <br/>
-            <br/>
-            <p class="text-center text-muted"><small>GUI powered by MetroUI, found on <a href="http://metroui.org.ua/" target="_blank">http://metroui.org.ua/</a></small></p>
         </div>
     </body>
 </html>
