--- a/static/html/default/templates/template_nofixed.html
+++ b/static/html/default/templates/template_nofixed.html
@@ -183,7 +183,7 @@
                     <div class="element">
                         <a class="dropdown-toggle" href="#"><i class="icon-plus-2"></i> Más</a>
                         <ul class="dropdown-menu" data-role="dropdown">
-                            
+                             <li><a href="/{systemModuleName}/inventario/revision_de_salida"><i class="icon-checkmark"></i> Revisión de salida</a></li> 
                             <li><a href="/{systemModuleName}/inventario/hoja_retaceo"><i class="icon-clipboard-2"></i> Hoja de retaceo</a></li>
                             <li><a href="/{systemModuleName}/inventario/movKardex"><i class="icon-clipboard"></i> Kardex</a></li>
                             <li><a href="#" class="dropdown-toggle"><i class="icon-printer"></i> Reportes</a>
